objects/copado__Test_Run__c.object
<CustomObject>
    <description>The execution of the test script.</description>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Test Runs</relationshipLabel>
        <relationshipName>Test_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Overall_Test_Comments__c</fullName>
        <label>Overall Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Percent_Passed__c</fullName>
        <formula>copado__Steps_Passed__c / copado__Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Passed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for testing</fullName>
                    <default>true</default>
                    <label>Ready for testing</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Passed with comments</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <summaryFilterItems>
            <field>copado__Test_Run_Step__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Passed, Passed with comments, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Test_Run_Step__c.copado__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Steps_Passed__c</fullName>
        <label>Steps Passed</label>
        <summaryFilterItems>
            <field>copado__Test_Run_Step__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Passed, Passed with comments</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Test_Run_Step__c.copado__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Test_Completion__c</fullName>
        <formula>copado__Steps_Completed__c / copado__Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
                <value>
                    <fullName>User Acceptance</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>copado__Test_Script__c</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>copado__Test__c</referenceTo>
        <relationshipLabel>Test Runs</relationshipLabel>
        <relationshipName>Test_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Steps__c</fullName>
        <label>Total Steps</label>
        <summaryForeignKey>copado__Test_Run_Step__c.copado__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Peer-Review</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Testing</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Regression</fullName>
                </value>
                <value>
                    <fullName>Usability</fullName>
                </value>
                <value>
                    <fullName>User Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Test Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>